added some template

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,11 @@
 <div class="container">
-  <h1>
-      Main page
-  </h1>
-  <a name="" id="" class="btn btn-primary" href="#" role="button"><span>Go to posts</span></a>
+  <div>
+    <h1>
+        Main page
+    </h1>
+    <a name="" id="" class="btn btn-primary" href="#" role="button"><span>Go to posts</span></a>
+  </div>
+  <div>
+
+  </div>
 </div>
