added post view,error,about. added routing and etc

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,6 @@
-<p>about works!</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">About</h1>
+    <p class="lead">This is my angular demo app, where i a lot of feathures of angular</p>
+  </div>
+</div>
