--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,11 +1,9 @@
-<div class="container">
-  <div>
-    <h1>
-        Main page
-    </h1>
-    <a name="" id="" class="btn btn-primary" href="#" role="button"><span>Go to posts</span></a>
-  </div>
-  <div>
-
-  </div>
+<div class="jumbotron" style="background-color: white;">
+  <h1 class="display-4">Welcome to my angular 9 app demo</h1>
+  <p>Post app</p>
+  <hr>
+  <p>You can create your own post</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Create post</a>
+  </p>
 </div>
