--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid" style="background-color: white;">
   <div class="container">
     <h1 class="display-4">About</h1>
     <p class="lead">This is my angular demo app, where i a lot of feathures of angular</p>
