add TODO to main(fetch the github repo)

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,9 +1,13 @@
 <div class="jumbotron" style="background-color: white;">
-  <h1 class="display-4">Welcome to my angular 9 app demo</h1>
-  <p>Post app</p>
+  <h1 class="display-4">Welcome to my angular app</h1>
   <hr>
-  <p>You can create your own post</p>
-  <p class="lead">
-    <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Create post</a>
-  </p>
+  <div>
+    <p>Last 3 update:</p>
+    <ul class="list-group">
+      <li class="list-group-item active">item</li>
+      <li class="list-group-item">item</li>
+      <li class="list-group-item ">item</li>
+    </ul>
+
+  </div>
 </div>
