--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,7 +1,9 @@
 <div class="card">
   <img class="card-img-top" src="holder.js/100x180/" alt="">
   <div class="card-body">
-    <h4 class="card-title">Title</h4>
-    <p class="card-text">Text</p>
+    <h4 class="card-title">{{post.title}}</h4>
+    <p class="card-text">{{post.text}}</p>
+    <button [routerLink]="['/posts']" type="button" class="btn btn-primary">Back</button>
   </div>
+
 </div>
