added input post method, and started addPost()

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,5 +2,22 @@
   <div class="container">
     <h1 class="display-4">About</h1>
     <p class="lead">This is my angular demo app, where i use a lot of feathures of angular</p>
+    <p class="lead">Developed and further updated by Nikita Tysiachnyi.</p>
+
+    <a class="github__link text-secondary"
+       style="margin-right: 5px;"
+       href="https://github.com/Tysiachnyi">
+        GitHub
+        <span>  </span>
+        <i class="fa fa-github" aria-hidden="true"></i>
+    </a>
+    <a class="github__link text-secondary"
+       style="margin-right: 5px"
+       href="https://www.linkedin.com/in/nikita-tisachniy-9b32b294/">
+        Linkedin
+        <span>  </span>
+        <i class="fa fa-linkedin" aria-hidden="true"></i>
+    </a>
   </div>
 </div>
+
