--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,3 +1,12 @@
-colorForJumb{
+.colorForJumb{
   background-color: white!important;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
 }
