--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,13 +15,14 @@
 }
 
 .footer {
-  position: sticky;
+  position: absolute;
   bottom: 0;
   width: 100%;
   height: 60px;
   line-height: 60px;
   background-color: #f5f5f5;
 }
+
 
 .github__link {
   margin-left: 5%;
