--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,24 @@
 <div class="header">
   <ul class="nav justify-content-center">
       <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" [routerLink]="['/']" [routerLinkActiveOptions]="{exact: true}"><h2>Main</h2></a>
+          <a class="nav-link" routerLinkActive="active"
+             [routerLink]="['/']" [routerLinkActiveOptions]="{exact: true}">
+              <h2>Main</h2>
+          </a>
       </li>
       <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="/posts"><h2>Posts</h2></a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" [routerLink]="['/about']"><h2>About</h2></a>
+          <a class="nav-link" routerLinkActive="active"
+             [routerLink]="['/about']">
+              <h2>About</h2>
+          </a>
+      </li>
+      <li class="nav-item">
+          <button class="btn btn-light">
+              <h2>Sign In</h2>
+          </button>
       </li>
   </ul>
 </div>
