--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -51,11 +51,11 @@
   <div class="col-sm-6" *ngFor="let post of postsService.posts">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">{{post.title}}</h5>
+        <h5 class="card-title">{{post.title | titlecase}}</h5>
         <p class="card-text">{{post.text}}</p>
         <a [routerLink]="['/posts',post.id]"
          class="btn btn-secondary">More detail</a>
-         <button class="btn btn-danger" style="margin-left: 5px;">Delete</button>
+         <button class="btn btn-danger" style="margin-left: 5px;" (click)="deletePost(post.id)">Delete</button>
       </div>
     </div>
   </div>
