--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,13 +15,25 @@
               <h2>About</h2>
           </a>
       </li>
-      <li class="nav-item">
-          <button class="btn btn-light">
-              <h2>Sign In</h2>
+      <li class="nav-item" *ngIf="auth.isAuth">
+          <a class="nav-link" routerLinkActive="active"
+             [routerLink]="['/user']">
+              <h2>User</h2>
+          </a>
+      </li>
+      <li class="nav-item" *ngIf="!auth.isAuth">
+          <button class="btn btn-light" (click)="auth.login()">
+              <h2>Login</h2>
           </button>
       </li>
+      <li class="nav-item" *ngIf="auth.isAuth">
+          <button class="btn btn-light" (click)="auth.logout()">
+              <h2>Logout</h2>
+          </button>
+      </li>
+
   </ul>
 </div>
 <div>
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 </div>
