--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -55,9 +55,15 @@
         <h5 class="card-title">{{post.title | titlecase}}</h5>
         <p class="card-text">{{post.text}}</p>
         <a [routerLink]="['/posts',post.id]"
-         class="btn btn-secondary">More detail</a>
-         <button class="btn btn-danger" *ngIf="auth.isAuth"
-                 style="margin-left: 5px;" (click)="deletePost(post.id)">Delete</button>
+         class="btn btn-secondary">More detail
+        </a>
+         <button class="btn btn-danger" style="margin-left: 5px;"
+                 *ngIf="auth.isAuth" (click)="deletePost(post.id)">Delete
+         </button>
+        <button class="btn btn-success" style="margin-left: 5px;"
+                *ngIf="auth.isAuth" (click)="likePost(post.id)">
+          <i class="fa fa-thumbs-up">Like</i>
+        </button>
       </div>
     </div>
   </div>
