--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -9,7 +9,25 @@
           <p class="card-text">Your ip: {{auth.ip}}</p>
           <p class="card-text">You logged in: {{auth.loggedDate | date:'short'}}</p>
           <p class="card-text">Count of posts: {{postsService.posts.length}}</p>
-          <a href="#" [routerLink]="'/'" class="btn btn-primary">Back</a>
+          <div *ngIf="postsService.likedPosts.length > 0">
+              <h4>List of liked post</h4>
+              <table class="table">
+                  <thead>
+                  <tr>
+                      <th>Title</th>
+                      <th>ID</th>
+                      <th>Link</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr *ngFor="let likedPost of postsService.likedPosts">
+                      <td scope="row">{{likedPost.title}}</td>
+                      <td>{{likedPost.id}}</td>
+                      <td>1</td>
+                  </tr>
+                  </tbody>
+              </table>
+          </div>
       </div>
     </div>
 </div>
