added postLike link to user page

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -23,7 +23,7 @@
                   <tr *ngFor="let likedPost of postsService.likedPosts">
                       <td scope="row">{{likedPost.title}}</td>
                       <td>{{likedPost.id}}</td>
-                      <td>1</td>
+                      <td><a [routerLink]="['/posts',likedPost.id]">Post link</a></td>
                   </tr>
                   </tbody>
               </table>
